--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 body{
     margin: 0;
 }
+
+#new{
+    border: 1px solid gray;
+    border-radius: 3px;
+    width: 200px;
+    height: 50px;
+    background-color: #CCC;
+    font-size: 14px;
+    text-align: center;
+}
+
+#new:hover{
+    background-color: #999;
+    cursor: pointer;
+}
+
+#timer{
+    width: 200px;
+    height: 50px;
+    font-size: 14px;
+    text-align: center;
+}
